--- a/public/css/Component/Home.css
+++ b/public/css/Component/Home.css
@@ -1,14 +1,14 @@
-.Home-main{
-    *{
+.Home-main {
+    * {
         box-sizing: border-box;
         margin: 0;
         padding: 0;
         list-style: none;
         text-decoration: none;
         font-family: "Inter";
-      }
-    
-    .main{
+    }
+
+    .main {
         max-width: 1280px;
         margin: 0 auto;
         scroll-behavior: smooth;
@@ -22,7 +22,7 @@
         text-transform: uppercase;
     }
 
-    .signin-button{
+    .signin-button {
         font-size: 17px;
         background-color: #1ca557;
         color: white;
@@ -34,7 +34,7 @@
         margin-left: 25px;
     }
 
-    header{
+    header {
         position: fixed;
         z-index: 10010;
         top: 0;
@@ -50,20 +50,20 @@
         justify-content: space-between;
         align-items: center;
         padding-top: 20px;
-        font-family: Inter ;
+        font-family: Inter;
         /* z-index: 10001; */
     }
-    
+
     .logo img {
         width: 64px;
         height: 64px;
     }
-    
+
     .hamburger {
         padding-right: 20px;
         cursor: pointer;
     }
-    
+
     .hamburger .line {
         display: block;
         width: 30px;
@@ -71,7 +71,7 @@
         margin-bottom: 10px;
         background-color: black;
     }
-    
+
     .nav__link {
         position: absolute;
         width: 94%;
@@ -80,18 +80,18 @@
         left: 10px;
         background-color: lightblue;
     }
-    
+
     .nav__link a {
         display: block;
         text-align: center;
         padding: 10px 0;
     }
-    
+
     .nav__link a:hover {
         background-color: #d8fcde;
         border-radius: 10px;
     }
-    
+
     .hide {
         display: none;
     }
@@ -109,7 +109,7 @@
         position: relative;
         background-color: #ffffff;
     }
-    
+
     .header-section .header-content {
         display: flex;
         flex-direction: column;
@@ -121,7 +121,7 @@
         flex: 1;
         flex-grow: 1;
     }
-    
+
     .header-section .title-subtitle {
         display: flex;
         flex-direction: column;
@@ -132,7 +132,7 @@
         width: 100%;
         flex: 0 0 auto;
     }
-    
+
     .header-section .text-wrapper {
         position: relative;
         align-self: stretch;
@@ -141,11 +141,11 @@
         font-weight: 600;
         color: #1ca557;
         font-size: 20px;
-        letter-spacing:  0px;
+        letter-spacing: 0px;
         line-height: 30px;
         font-style: normal;
     }
-    
+
     .header-section .div {
         position: relative;
         align-self: stretch;
@@ -158,7 +158,7 @@
         font-style: normal;
 
     }
-    
+
     .header-section .this-is-a-template {
         position: relative;
         align-self: stretch;
@@ -168,14 +168,14 @@
         font-size: 17px;
         letter-spacing: 0px;
         line-height: 27px;
-        font-style:normal;
+        font-style: normal;
 
     }
 
-    .header-section .this-is-a-template b{
-        font-family: "Inter", Helvetica ;
+    .header-section .this-is-a-template b {
+        font-family: "Inter", Helvetica;
     }
-    
+
     .header-section .button {
         display: inline-flex;
         align-items: center;
@@ -185,10 +185,10 @@
         border-radius: 8px;
         position: relative;
         flex: 0 0 auto;
-        background-color:#1ca557 ;
+        background-color: #1ca557;
         cursor: pointer;
     }
-    
+
     .header-section .text-wrapper-2 {
         position: relative;
         width: fit-content;
@@ -203,17 +203,17 @@
         white-space: nowrap;
         cursor: pointer;
     }
-    
+
     .header-section .headerimage {
         position: relative;
         flex: 1;
         min-width: 320px;
         /* max-width: 580px; */
         flex-grow: 1;
-    
+
     }
 
-     /* services container */
+    /* services container */
     .services-section {
         display: flex;
         flex-direction: column;
@@ -224,22 +224,22 @@
         background-color: #fff;
     }
 
-    .services-section .text-wrapper{
+    .services-section .text-wrapper {
         position: relative;
         width: fit-content;
         margin-top: 50px;
-        font-family:"Inter";
+        font-family: "Inter";
         font-weight: 600;
         color: var(--main-text-color);
         font-size: 32px;
         text-align: center;
         letter-spacing: 0px;
-        line-height:  42px;
+        line-height: 42px;
         white-space: nowrap;
         font-style: normal;
 
     }
-    
+
     .services-section .cards-section {
         display: flex;
         flex-wrap: wrap;
@@ -250,7 +250,7 @@
         width: 100%;
         flex: 0 0 auto;
     }
-    
+
     .services-section .services-card {
         display: flex;
         flex-direction: column;
@@ -264,13 +264,13 @@
         flex-grow: 1;
         background-color: #ffffff;
     }
-    
+
     .services-section .services-card-icon {
         position: relative;
         width: 124px;
         height: 124px;
     }
-    
+
     .services-section .title-description {
         display: flex;
         flex-direction: column;
@@ -281,70 +281,70 @@
         width: 100%;
         flex: 0 0 auto;
     }
-    
+
     .services-section .title {
         position: relative;
         align-self: stretch;
         height: 42px;
         margin-top: -1px;
-        font-family:"Inter";
+        font-family: "Inter";
         font-weight: 600;
         color: var(--main-text-color);
         font-size: 27px;
         text-align: center;
-        letter-spacing:  0px;
+        letter-spacing: 0px;
         line-height: 42px;
         white-space: nowrap;
         font-style: normal;
 
     }
-    
+
     .services-section .text-wrapper-2 {
         position: relative;
         align-self: stretch;
         font-family: "Inter";
         font-weight: 400;
         color: var(--main-text-color);
-        font-size:  17px;
+        font-size: 17px;
         text-align: center;
         letter-spacing: 0px;
         line-height: 27px;
         font-style: normal;
         margin-top: 50px;
-    
+
     }
 
     /* About us section */
-    .about-us-container{
+    .about-us-container {
         display: flex;
         align-items: center;
         justify-content: center;
 
     }
 
-    .about-us-content .title{
+    .about-us-content .title {
         position: relative;
         align-self: stretch;
         height: 42px;
         margin-top: -1px;
-        font-family:"Inter";
-        font-weight:  600;
+        font-family: "Inter";
+        font-weight: 600;
         color: var(--main-text-color);
-        font-size:  27px;
+        font-size: 27px;
         letter-spacing: 0px;
-        line-height:  42px;
+        line-height: 42px;
         white-space: nowrap;
         font-style: normal;
         margin-bottom: 25px;
 
     }
 
-    .about-us-content-list li{
-        font-family:  "Inter";
+    .about-us-content-list li {
+        font-family: "Inter";
         line-height: 27px;
         font-size: 17px;
         letter-spacing: 0px;
-        font-weight:400;
+        font-weight: 400;
         font-style: normal;
         color: var(--main-text-color);
         margin-bottom: 20px;
@@ -353,14 +353,14 @@
 
     }
 
-    .about-us-image img{
+    .about-us-image img {
         width: 675px;
         height: 500px;
         padding-left: 20px;
 
     }
 
-    .about-us-section{
+    .about-us-section {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -370,25 +370,25 @@
         background-color: #fff;
     }
 
-    .about-us-section .text-wrapper{
+    .about-us-section .text-wrapper {
         position: relative;
         width: fit-content;
         margin-top: 50px;
         font-family: "Inter";
         font-weight: 600;
         color: var(--main-text-color);
-        font-size:  32px;
+        font-size: 32px;
         text-align: center;
         letter-spacing: 0px;
         line-height: 42px;
         white-space: nowrap;
-        font-style:  normal;
+        font-style: normal;
 
 
     }
 
-     /* announcements section */
-    .Announcement-cont{
+    /* announcements section */
+    .Announcement-cont {
         padding: 30px;
         box-sizing: border-box;
         display: grid;
@@ -442,13 +442,13 @@
 
     }
 
-    .view-more-button{
+    .view-more-button {
         display: flex;
         align-items: center;
         justify-content: center;
     }
 
-    .view-more-button button{
+    .view-more-button button {
         border: 2px solid #1ca557;
         color: var(--green-color-one);
         padding: 10px 25px;
@@ -459,14 +459,14 @@
         cursor: pointer;
     }
 
-    .view-more-button button:hover{
+    .view-more-button button:hover {
         color: #fff;
         font-weight: 550;
         background-color: var(--green-color-one);
         transition: background-color 0.7s;
     }
 
-    .announcement-section{
+    .announcement-section {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -476,24 +476,24 @@
         background-color: #fff;
     }
 
-    .announcement-section .text-wrapper{
+    .announcement-section .text-wrapper {
         position: relative;
         width: fit-content;
         margin-top: 50px;
         font-family: "Inter";
-        font-weight:600;
+        font-weight: 600;
         color: var(--main-text-color);
-        font-size:  32px;
+        font-size: 32px;
         text-align: center;
-        letter-spacing:  0px;
+        letter-spacing: 0px;
         line-height: 42px;
         white-space: nowrap;
         font-style: normal;
 
     }
 
-     /* contact section */
-    .contact-section{
+    /* contact section */
+    .contact-section {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -503,7 +503,7 @@
         background-color: var(--white);
     }
 
-    .contact-section .text-wrapper{
+    .contact-section .text-wrapper {
         position: relative;
         /* width: 626px; */
         margin-top: 50px;
@@ -511,13 +511,13 @@
         font-weight: 600;
         color: var(--main-text-color);
         font-size: 32px;
-        letter-spacing:  0px;
+        letter-spacing: 0px;
         line-height: 42px;
         font-style: normal;
 
     }
 
-    .contact-section .div{
+    .contact-section .div {
         display: flex;
         flex-wrap: wrap;
         align-items: flex-start;
@@ -528,7 +528,7 @@
         flex: 0 0 auto;
     }
 
-    .contact-section .contact-info{
+    .contact-section .contact-info {
         gap: 42px;
         display: flex;
         flex-direction: column;
@@ -539,7 +539,7 @@
         flex-grow: 1;
     }
 
-    .contact-section .text-description{
+    .contact-section .text-description {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -550,21 +550,21 @@
         flex: 0 0 auto;
     }
 
-    .contact-section .p{
+    .contact-section .p {
         position: relative;
         align-self: stretch;
         margin-top: -1px;
-        font-family:  "Inter";
-        font-weight:  400;
+        font-family: "Inter";
+        font-weight: 400;
         color: var(--main-text-color);
         font-size: 17px;
-        letter-spacing:  0px;
-        line-height:  27px;
-        font-style:  normal;
+        letter-spacing: 0px;
+        line-height: 27px;
+        font-style: normal;
 
     }
 
-    .contact-section .social-links{
+    .contact-section .social-links {
         display: flex;
         align-items: flex-start;
         gap: 20px;
@@ -574,13 +574,13 @@
         flex: 0 0 auto;
     }
 
-    .contact-section .img{
+    .contact-section .img {
         position: relative;
         width: 36px;
         height: 36px;
     }
 
-    .contact-section .contact-form{
+    .contact-section .contact-form {
         max-width: 520px;
         gap: 24px;
         display: flex;
@@ -592,7 +592,7 @@
         flex-grow: 1;
     }
 
-    .contact-section .input-fields{
+    .contact-section .input-fields {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -603,7 +603,7 @@
         flex: 0 0 auto;
     }
 
-    .contact-section .input-field{
+    .contact-section .input-field {
         /* min-width: 300px; */
         width: 520px;
         max-width: 520px;
@@ -617,15 +617,15 @@
         flex-grow: 1;
         margin-top: -1px;
         font-family: "Inter";
-        font-weight:  400;
+        font-weight: 400;
         color: var(--main-text-color);
-        font-size:  17px;
+        font-size: 17px;
         letter-spacing: 0px;
         line-height: 27px;
         font-style: normal;
         border-radius: 8px;
 
-       
+
     }
 
     .contact-section .button {
@@ -644,7 +644,7 @@
         cursor: pointer;
     }
 
-    .contact-section .contact{
+    .contact-section .contact {
         position: relative;
         width: fit-content;
         margin-top: -1px;
@@ -657,21 +657,21 @@
         cursor: pointer;
     }
 
-    .err{
+    .err {
         color: red;
         font-size: 14px;
     }
 
-    footer{
+    footer {
         color: #b8b8c3;
     }
 
-    footer p{
+    footer p {
         padding: 24px;
         text-align: center;
     }
 
-    .hidden{
+    .hidden {
         display: none;
     }
 
@@ -735,7 +735,7 @@
         box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
     }
 
-    .popup button:hover{
+    .popup button:hover {
         background: var(--button-hover-green);
     }
 
@@ -763,162 +763,83 @@
             display: none;
         }
     }
-    
+
     /* body */
     @media screen and (max-width: 945px) {
-        .header-section .header-content{
+        .header-section .header-content {
             padding: 24px;
         }
-        .header-section .div{
+
+        .header-section .div {
             font-size: 32px;
         }
-        .header-section .button{
+
+        .header-section .button {
             padding: 12px 24px;
         }
 
-        .contact-section .div{
+        .contact-section .div {
             gap: 42px;
         }
-        .contact-section .button{
+
+        .contact-section .button {
             padding: 16px 32px;
         }
     }
 
     @media screen and (max-width: 1120px) {
 
-        .about-us-container{
+        .about-us-container {
             display: flex;
             flex-direction: column;
         }
 
     }
 
+    @media screen and (max-width:802px) {
+        .Announcement-cont {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+        }
+
+        .Announcement-cont h2 {
+            font-size: 21px;
+            letter-spacing: 0.01rem;
+
+        }
+
+        .Announcement-cont p {
+            font-size: 15px;
+            margin: 10px 15px;
+            letter-spacing: 0.03rem;
+
+        }
+
+        .Announcement-cont img {
+            border-radius: 10px;
+            height: 375px;
+            width: 94%;
+        }
+    }
+
+    @media screen and (max-width:706px) {
+        .about-us-image img {
+            width: 400px;
+            height: 500px;
+            padding-left: 20px;
+
+        }
+    }
+
+    @media screen and (max-width:440px) {
+        .about-us-image img {
+            width: 400px;
+            height: 500px;
+            padding-left: 20px;
+
+        }
+    }
+
+
 }
-
-
-/* .Home-main {
-    .main {
-        width: 100%;
-        background-color: white;
-        height: 725px;
-        display: grid;
-        grid-template-rows: 15% 85%;
-        font-family: Arial, Helvetica, sans-serif;
-    }
-
-
-    .main-top {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    .main-top img {
-        height: 90px;
-        width: auto;
-        margin-top: 30px;
-        margin-left: 140px;
-    }
-
-    .set {
-        display: flex;
-        gap: 40px;
-        align-items: center;
-        margin-right: 150px;
-
-    }
-
-    .set p {
-        font-size: 17px;
-        color: #414143;
-        cursor: pointer;
-        transition: color 0.3s;
-        letter-spacing: 0.03rem;
-    }
-
-    .set p:hover {
-        color: #414143;
-    }
-
-    .set button {
-        font-size: 16px;
-        background-color: #1ca557;
-        color: white;
-        padding: 7px 20px;
-        border: none;
-        border-radius: 10px;
-        cursor: pointer;
-        transition: background-color 0.3s;
-    }
-
-    .set button:hover {
-        background-color: #19954e;
-    }
-
-    .main-bottom {
-        display: grid;
-        grid-template-columns: 30% 70%;
-    }
-
-    .main-bottom-right {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        box-sizing: border-box;
-        margin-left: 50px;
-    }
-
-    .main-bottom img {
-        width: 100%;
-        height: 85%;
-    }
-
-    .main-bottom-right img {
-        max-width: 100%;
-        height: auto;
-        display: block;
-        transition: opacity 1s ease-in-out;
-        width: 70%;
-        height: 75%;
-        border-radius: 30px;
-    }
-
-    .main-bottom-left {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        box-sizing: border-box;
-        padding: 140px;
-
-    }
-
-    .main-bottom-left h1 {
-        font-size: 60px;
-        width: 100px;
-        color: #1ca557;
-    }
-
-    .main-bottom-left p {
-        font-size: 21px;
-        width: 400px;
-        color: #414143;
-        margin-top: 10px;
-        margin-bottom: 28px;
-        letter-spacing: 0.005rem;
-    }
-
-    .main-bottom-left button {
-        font-size: 18px;
-        background-color: #1ca557;
-        color: white;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 10px;
-        cursor: pointer;
-        transition: background-color 0.3s;
-    }
-
-    .main-bottom-left button:hover {
-        background-color: #19954e;
-    }
-} */
