--- a/public/css/Component/CenterManager/CenterManager_Request_Completed.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Completed.css
@@ -208,13 +208,13 @@
 
     .collect-details-pop-form-content {
         display: grid;
-        grid-template-columns: 70% 30%;
+        grid-template-columns: 60% 40%;
         width: 80%;
         background: var(--background-color-main);
         box-shadow: var(--form-box-shadow);
         border-radius: 10px;
         padding: 10px 40px;
-        height: 300px;
+        height: 350px;
     }
 
     .collect-details-pop-form-content span {
@@ -231,7 +231,7 @@
     .collect-details-pop-form-content-labels h3 {
         font-weight: 300;
         font-size: 14px;
-        margin-bottom: 5%;
+        margin-bottom: 7%;
         width: 300px;
         text-align: left;
         margin-left: 20%;
@@ -259,6 +259,7 @@
         font-size: 14px;
         color: #767e95;
         font-weight: 550;
+        overflow: auto;
         
     }
 
