--- a/public/css/Component/Collector/Collector_Request_Top.css
+++ b/public/css/Component/Collector/Collector_Request_Top.css
@@ -205,6 +205,7 @@
     .main-right-top-four-right {
         display: flex;
         padding-right: 20px;
+        margin-left: 1050px;
     }
 
     .main-right-top-four img {
